# Robotics1

project1/: CMakeLists.txt  instructions.txt  package.xml
project1/cfg/: parameters.cfg
project1/launch/: launcher.launch
project1/msg/: MethodMessage.msg  pre_speed.msg
project1/src/: ERK.cpp  final_message.cpp  lin_ang.cpp  sync_pub.cpp
project1/srv/: reinit_pose.srv  reselect_pose.srv
